--- a/Miyu/Feature/Upload/UploadViewController.storyboard
+++ b/Miyu/Feature/Upload/UploadViewController.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Bzy-5R-Lfb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nd0-tR-kfa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,20 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ow3-ZF-J5Y">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <items/>
-                            </toolbar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="UPLOAD" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A5X-uO-S68">
-                                <rect key="frame" x="160" y="12" width="67" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="reZ-Tm-6yR">
-                                <rect key="frame" x="20" y="171" width="335" height="335"/>
+                                <rect key="frame" x="20" y="215" width="335" height="335"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="reZ-Tm-6yR" secondAttribute="height" multiplier="1:1" id="Abq-F1-jiX"/>
                                 </constraints>
@@ -42,7 +30,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n1D-Dz-Ak8">
-                                <rect key="frame" x="29" y="516" width="317" height="112"/>
+                                <rect key="frame" x="29" y="560" width="317" height="68"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VM0-av-LfR">
                                         <rect key="frame" x="8" y="8" width="40" height="40"/>
@@ -56,7 +44,7 @@
                                         </connections>
                                     </button>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Photo caption!" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ETu-mX-rXd">
-                                        <rect key="frame" x="48" y="10" width="269" height="112"/>
+                                        <rect key="frame" x="48" y="10" width="269" height="68"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -73,7 +61,7 @@
                                 </constraints>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="F8n-fY-Siz">
-                                <rect key="frame" x="29" y="69" width="80" height="80"/>
+                                <rect key="frame" x="29" y="113" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="F8n-fY-Siz" secondAttribute="height" multiplier="1:1" id="Hts-TR-7qd"/>
                                     <constraint firstAttribute="width" secondItem="F8n-fY-Siz" secondAttribute="height" multiplier="1:1" id="KEg-VB-O1G"/>
@@ -81,20 +69,13 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lacie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fGE-q7-9zu">
-                                <rect key="frame" x="119" y="69" width="112" height="25.5"/>
+                                <rect key="frame" x="119" y="113" width="112" height="25.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UYa-xu-FBw">
-                                <rect key="frame" x="164.5" y="636" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="uploadContent:" destination="Bzy-5R-Lfb" eventType="touchUpInside" id="KFE-aM-Fko"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ih5-p2-5ud">
-                                <rect key="frame" x="119" y="107" width="57" height="54"/>
+                                <rect key="frame" x="119" y="151" width="57" height="54"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -104,23 +85,32 @@
                         <constraints>
                             <constraint firstItem="IxR-J2-X4S" firstAttribute="trailing" secondItem="n1D-Dz-Ak8" secondAttribute="trailing" constant="29" id="30X-TC-zNg"/>
                             <constraint firstItem="F8n-fY-Siz" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="29" id="38b-c2-trW"/>
+                            <constraint firstItem="IxR-J2-X4S" firstAttribute="bottom" secondItem="n1D-Dz-Ak8" secondAttribute="bottom" constant="39" id="5BC-sd-yh9"/>
                             <constraint firstItem="F8n-fY-Siz" firstAttribute="top" secondItem="IxR-J2-X4S" secondAttribute="top" constant="49" id="C4g-2V-Yd3"/>
                             <constraint firstItem="fGE-q7-9zu" firstAttribute="top" secondItem="F8n-fY-Siz" secondAttribute="top" id="LTj-mp-uTq"/>
                             <constraint firstItem="reZ-Tm-6yR" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="20" id="PLW-Dz-dR8"/>
-                            <constraint firstItem="UYa-xu-FBw" firstAttribute="centerX" secondItem="IxR-J2-X4S" secondAttribute="centerX" id="gyV-wK-7gb"/>
                             <constraint firstItem="reZ-Tm-6yR" firstAttribute="top" secondItem="Ih5-p2-5ud" secondAttribute="bottom" constant="10" id="hGm-cM-Tm2"/>
                             <constraint firstItem="IxR-J2-X4S" firstAttribute="trailing" secondItem="reZ-Tm-6yR" secondAttribute="trailing" constant="20" id="heB-s6-AfH"/>
                             <constraint firstItem="n1D-Dz-Ak8" firstAttribute="top" secondItem="reZ-Tm-6yR" secondAttribute="bottom" constant="10" id="kzR-hy-fa2"/>
-                            <constraint firstItem="UYa-xu-FBw" firstAttribute="top" secondItem="n1D-Dz-Ak8" secondAttribute="bottom" constant="8" id="qef-pq-0KT"/>
                             <constraint firstItem="fGE-q7-9zu" firstAttribute="leading" secondItem="F8n-fY-Siz" secondAttribute="trailing" constant="10" id="uCP-mt-9EF"/>
                             <constraint firstItem="Ih5-p2-5ud" firstAttribute="top" secondItem="fGE-q7-9zu" secondAttribute="bottom" constant="12.5" id="uNE-uv-pM5"/>
                             <constraint firstItem="Ih5-p2-5ud" firstAttribute="leading" secondItem="F8n-fY-Siz" secondAttribute="trailing" constant="10" id="uZX-9y-FBg"/>
                             <constraint firstItem="n1D-Dz-Ak8" firstAttribute="leading" secondItem="IxR-J2-X4S" secondAttribute="leading" constant="29" id="wxk-O2-Sjx"/>
-                            <constraint firstItem="IxR-J2-X4S" firstAttribute="bottom" secondItem="UYa-xu-FBw" secondAttribute="bottom" constant="1" id="yrd-Zc-JXj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="IxR-J2-X4S"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Upload" id="gc0-oI-hyi"/>
+                    <navigationItem key="navigationItem" title="Upload" id="ket-Rp-AOd">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="tQP-38-zOa">
+                            <connections>
+                                <action selector="dismiss:" destination="Bzy-5R-Lfb" id="lII-yJ-68x"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="aeF-Ev-66b">
+                            <connections>
+                                <action selector="uploadContent:" destination="Bzy-5R-Lfb" id="RaC-NE-k7d"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="captionTextView" destination="ETu-mX-rXd" id="6nV-c7-ly8"/>
                         <outlet property="centerImage" destination="reZ-Tm-6yR" id="SIL-dm-cSK"/>
@@ -133,7 +123,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VC9-MH-sxZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="332" y="393.55322338830587"/>
+            <point key="canvasLocation" x="671.20000000000005" y="393.55322338830587"/>
+        </scene>
+        <!--Upload-->
+        <scene sceneID="jtc-pM-2Ok">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nd0-tR-kfa" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Upload" id="gc0-oI-hyi"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="e2W-hv-VfR">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Bzy-5R-Lfb" kind="relationship" relationship="rootViewController" id="Z0W-ij-an9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UT8-RI-NfC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-46" y="394"/>
         </scene>
     </scenes>
     <resources>
