--- a/Miyu/Feature/Profile/ProfileViewController.storyboard
+++ b/Miyu/Feature/Profile/ProfileViewController.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="random_1" translatesAutoresizingMaskIntoConstraints="NO" id="gYY-IN-Pyz">
-                                <rect key="frame" x="24" y="59" width="80" height="80"/>
+                                <rect key="frame" x="24" y="79" width="80" height="80"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="gYY-IN-Pyz" secondAttribute="height" multiplier="1:1" id="68D-hC-1Eh"/>
                                     <constraint firstAttribute="width" secondItem="gYY-IN-Pyz" secondAttribute="height" multiplier="1:1" id="Z7f-xO-zve"/>
@@ -28,39 +28,39 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Leslie Pound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysu-1C-l4w">
-                                <rect key="frame" x="104" y="59" width="98" height="21"/>
+                                <rect key="frame" x="112" y="79" width="98" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.67" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FxI-Gj-5WZ">
-                                <rect key="frame" x="104" y="92" width="34" height="21"/>
+                                <rect key="frame" x="112" y="112" width="34" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="88E-Nh-ZaN">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
                                     <navigationItem title="YOU" id="sB4-eh-4SS"/>
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currently working at hoodwinked" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftQ-qX-Yab">
-                                <rect key="frame" x="104" y="120" width="266" height="21"/>
+                                <rect key="frame" x="112" y="140" width="258" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Du-eo-mVx" customClass="MenuBar" customModule="Miyu" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="149" width="375" height="50"/>
-                                <color key="backgroundColor" red="1" green="0.78007202561611755" blue="0.98925340130010453" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <rect key="frame" x="0.0" y="169" width="375" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="nCw-ER-fsB"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eN4-Hz-Vob" customClass="CustomTabView" customModule="Miyu" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="199" width="375" height="468"/>
-                                <color key="backgroundColor" red="1" green="0.83001911613902446" blue="0.53398158813248453" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <rect key="frame" x="0.0" y="219" width="375" height="448"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.36068126307312853" green="0.40290094802092979" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -69,7 +69,7 @@
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="bottom" secondItem="eN4-Hz-Vob" secondAttribute="bottom" id="124-yf-dvp"/>
                             <constraint firstItem="gYY-IN-Pyz" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="1SJ-yT-2v3"/>
                             <constraint firstItem="eN4-Hz-Vob" firstAttribute="top" secondItem="0Du-eo-mVx" secondAttribute="bottom" id="1ly-20-YRY"/>
-                            <constraint firstItem="Ysu-1C-l4w" firstAttribute="leading" secondItem="gYY-IN-Pyz" secondAttribute="trailing" id="7He-vI-AXM"/>
+                            <constraint firstItem="Ysu-1C-l4w" firstAttribute="leading" secondItem="gYY-IN-Pyz" secondAttribute="trailing" constant="8" id="7He-vI-AXM"/>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="eN4-Hz-Vob" secondAttribute="trailing" id="7iA-Rw-035"/>
                             <constraint firstItem="gYY-IN-Pyz" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" constant="24" id="A9P-x1-hig"/>
                             <constraint firstItem="ftQ-qX-Yab" firstAttribute="leading" secondItem="Ysu-1C-l4w" secondAttribute="leading" id="Aer-2X-Bjg"/>
@@ -80,7 +80,7 @@
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="88E-Nh-ZaN" secondAttribute="trailing" id="VAF-Dk-Nlz"/>
                             <constraint firstItem="Ysu-1C-l4w" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="bottom" constant="15" id="bAj-Y1-FDt"/>
                             <constraint firstItem="0Du-eo-mVx" firstAttribute="leading" secondItem="PxE-bb-h4c" secondAttribute="leading" id="cOo-4B-gpI"/>
-                            <constraint firstItem="PxE-bb-h4c" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="top" constant="20" id="grq-tt-F6b"/>
+                            <constraint firstItem="PxE-bb-h4c" firstAttribute="top" secondItem="88E-Nh-ZaN" secondAttribute="top" id="grq-tt-F6b"/>
                             <constraint firstItem="PxE-bb-h4c" firstAttribute="trailing" secondItem="ftQ-qX-Yab" secondAttribute="trailing" constant="5" id="n9j-T2-Sv1"/>
                             <constraint firstItem="FxI-Gj-5WZ" firstAttribute="top" secondItem="Ysu-1C-l4w" secondAttribute="bottom" constant="12" id="qHq-0C-VMb"/>
                             <constraint firstItem="0Du-eo-mVx" firstAttribute="top" secondItem="gYY-IN-Pyz" secondAttribute="bottom" constant="10" id="zEs-mj-1DJ"/>
