--- a/Miyu/Feature/Profile/ProfileViewController.storyboard
+++ b/Miyu/Feature/Profile/ProfileViewController.storyboard
@@ -42,7 +42,13 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="88E-Nh-ZaN">
                                 <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                                 <items>
-                                    <navigationItem title="YOU" id="sB4-eh-4SS"/>
+                                    <navigationItem title="YOU" id="sB4-eh-4SS">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" image="burger" style="plain" id="MQQ-AA-gow">
+                                            <connections>
+                                                <action selector="dismissButtonTapped:" destination="cn7-xV-1xf" id="Zta-Tl-X9f"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Currently working at hoodwinked" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftQ-qX-Yab">
@@ -106,9 +112,10 @@
                     <tabBarItem key="tabBarItem" title="Profile" id="lWf-z5-G5N"/>
                     <connections>
                         <outlet property="contentCollectionView" destination="hKc-OQ-HNz" id="6sh-3o-cy4"/>
+                        <outlet property="dismissButton" destination="MQQ-AA-gow" id="3Cj-QV-tHK"/>
                         <outlet property="profileImage" destination="gYY-IN-Pyz" id="mYO-s2-xOd"/>
                         <outlet property="profileMenuBar" destination="0Du-eo-mVx" id="R5j-RN-QSC"/>
-                        <outlet property="propfileNavigationBar" destination="88E-Nh-ZaN" id="LB1-hy-ASH"/>
+                        <outlet property="profileNavigationBar" destination="88E-Nh-ZaN" id="LB1-hy-ASH"/>
                         <outlet property="userAttribute" destination="ftQ-qX-Yab" id="3gY-G3-h3Z"/>
                         <outlet property="userName" destination="Ysu-1C-l4w" id="SU2-HR-fMA"/>
                         <outlet property="userRating" destination="FxI-Gj-5WZ" id="kbf-KZ-u5y"/>
@@ -120,6 +127,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="burger" width="16" height="16"/>
         <image name="random_1" width="376" height="564"/>
     </resources>
 </document>
